--- a/TreeViewTester/MainWindow.xaml
+++ b/TreeViewTester/MainWindow.xaml
@@ -3,6 +3,38 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <TreeView Height="287" HorizontalAlignment="Left" Margin="20,12,0,0" Name="treeView1" VerticalAlignment="Top" Width="334" SelectedItemChanged="treeView2_SelectedItemChanged" />
+        <TreeView Height="264" x:Name="tvProperties" Width="220" SelectedItemChanged="tvProperties_SelectedItemChanged" Margin="12,12,270,34">
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="{x:Type TreeViewItem}">
+                    <Setter Property="IsExpanded" Value="{Binding IsExpanded}"></Setter>
+                </Style>
+            </TreeView.ItemContainerStyle>
+            <TreeView.ItemTemplate>
+
+                <HierarchicalDataTemplate  ItemsSource="{Binding Path=Children}">
+
+                    <StackPanel Orientation="Horizontal">
+
+                        <Image VerticalAlignment="Center" Source="{Binding Icon}" Width="16" Height="16" Margin="0,0,2,2"></Image>
+
+                        <TextBlock VerticalAlignment="Center" Name="nodeName" Text="{Binding DisplayName}"></TextBlock>
+
+                        <Image VerticalAlignment="Center" Source="{Binding EditIcon}" Margin="2,0,0,0"></Image>
+
+                        <StackPanel.ToolTip>
+
+                            <TextBlock VerticalAlignment="Center" Text="{Binding Name}" TextWrapping="Wrap" MaxWidth="200" ></TextBlock>
+
+                        </StackPanel.ToolTip>
+
+                    </StackPanel>
+
+                </HierarchicalDataTemplate>
+
+            </TreeView.ItemTemplate>
+        </TreeView>
+        <Label Content="Label" Height="28" HorizontalAlignment="Left" Margin="314,81,0,0" Name="label1" VerticalAlignment="Top" Width="148" />
+        <Button Content="反序列化民族" Height="23" HorizontalAlignment="Left" Margin="397,253,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
+        <Label Content="加载耗时：" Height="31" HorizontalAlignment="Left" Margin="238,198,0,0" Name="label2" VerticalAlignment="Top" Width="253" />
     </Grid>
 </Window>
