--- a/MessageBox/DataSelectWindow.xaml
+++ b/MessageBox/DataSelectWindow.xaml
@@ -1,5 +1,6 @@
-﻿<Window x:Class="MessageBoxTEST.DataSelectWindow"
+﻿<my:DataSelectWindowBase x:Class="MessageBoxTEST.DataSelectWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:my="clr-namespace:MessageBoxTEST.DataProviderBase"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="DataSelectWindow" Height="300" Width="300" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid>
@@ -17,4 +18,4 @@
             </TreeViewItem>
         </TreeView>
     </Grid>
-</Window>
+</my:DataSelectWindowBase>
