--- a/ReflectionOtherWin/MainWindow.xaml
+++ b/ReflectionOtherWin/MainWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="ReflectionOtherWin.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" xmlns:my="clr-namespace:MessageBoxTEST.DataProviderBase;assembly=MessageBox">
     <Grid>
         <TextBox Height="32" HorizontalAlignment="Left" Margin="36,51,0,0" Name="textBox1" VerticalAlignment="Top" Width="363" PreviewMouseDown="textBox1_PreviewMouseDown" />
+        <Button Content="PopUsercontrolWin" Height="23" HorizontalAlignment="Left" Margin="360,236,0,0" Name="button1" VerticalAlignment="Top" Width="131" Click="button1_Click" />
+        <Button Content="DataWin" Height="23" HorizontalAlignment="Left" Margin="107,266,0,0" Name="button2" VerticalAlignment="Top" Width="75" Click="button2_Click" />
+        <Label Content="EqukTextBox:" Height="28" HorizontalAlignment="Left" Margin="49,140,0,0" Name="label1" VerticalAlignment="Top" />
+        <my:EqukTextBox Height="23" HorizontalAlignment="Left" Margin="142,142,0,0" Name="equkTextBox1" VerticalAlignment="Top" Width="266" />
     </Grid>
 </Window>
