--- a/JsonLength/App.xaml
+++ b/JsonLength/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="DpChanged.App"
+﻿<Application x:Class="JsonLength.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="VisualTree.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
