--- a/MessageBox/Window1.xaml
+++ b/MessageBox/Window1.xaml
@@ -2,7 +2,5 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Window1" Height="300" Width="300" Closing="Window_Closing">
-    <Grid>
-        
-    </Grid>
+    <Border x:Name="containerDD" ></Border>
 </Window>
